--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@reduxjs/toolkit": "^2.2.5",
 		"axios": "^1.6.8",
 		"next": "14.2.3",
 		"react": "^18",
 		"react-dom": "^18",
+		"react-redux": "^9.1.2",
 		"swr": "^2.2.5"
 	},
 	"devDependencies": {
