--- a/package.json
+++ b/package.json
@@ -14,9 +14,8 @@
 		"next": "14.2.3",
 		"react": "^18",
 		"react-dom": "^18",
-		"react-redux": "^9.1.2",
-		"redux-persist": "^6.0.0",
-		"swr": "^2.2.5"
+		"swr": "^2.2.5",
+		"zustand": "^4.5.2"
 	},
 	"devDependencies": {
 		"@types/node": "^20",
