--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"@reduxjs/toolkit": "^2.2.5",
 		"axios": "^1.6.8",
 		"next": "14.2.3",
+		"next-auth": "^4.24.7",
 		"react": "^18",
 		"react-dom": "^18",
 		"react-icons": "^5.2.1",
