--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
 	"dependencies": {
 		"@reduxjs/toolkit": "^2.2.5",
 		"axios": "^1.6.8",
-		"next": "14.2.3",
+		"googleapis": "^140.0.0",
+		"net": "^1.0.2",
+		"next": "^14.2.4",
 		"next-auth": "^4.24.7",
 		"normalize.css": "^8.0.1",
 		"react": "^18",
